# Repo_intelligence

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
notebooks/: exploration.ipynb
src/: __init__.py  api.py  pipeline.py
src/agents/: __init__.py  workflow.py
src/embeddings/: __init__.py  embedder.py
src/github/: __init__.py  connector.py
src/services/: __init__.py  lifecycle.py  runtime.py
src/ui/: app.py
src/vector_db/: store.py
tests/: test_system.py
