[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-repo-intelligence"
version = "0.1.0"
description = "AI-powered repository analysis, retrieval, and architecture tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-google-genai>=1.0.0",
  "langchain-community>=0.3.0",
  "sentence-transformers>=3.0.0",
  "transformers>=4.40.0",
  "torch>=2.3.0",
  "tree-sitter>=0.22.0",
  "tree-sitter-python>=0.21.0",
  "tree-sitter-javascript>=0.21.0",
  "tree-sitter-typescript>=0.21.0",
  "tree-sitter-go>=0.21.0",
  "tree-sitter-rust>=0.21.0",
  "qdrant-client>=1.9.0",
  "chromadb>=0.5.0",
  "PyGithub>=2.3.0",
  "gitpython>=3.1.43",
  "graphviz>=0.20.0",
  "plantuml>=0.3.0",
  "networkx>=3.3",
  "matplotlib>=3.9.0",
  "streamlit>=1.35.0",
  "plotly>=5.22.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.9.0",
  "tiktoken>=0.7.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "tqdm>=4.66.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
